# iotrace

./: .gitignore  .gitmodules  BUILD.org  CMakeLists.txt  Containerfile  README.org  meson.build  meson.options
include/iotrace/: iotrace.h  probe.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  iotrace.c  print.c  probe.bpf.c
subprojects/: elfutils.wrap  libbpf.wrap
subprojects/packagefiles/elfutils/: meson.build
subprojects/packagefiles/libbpf/: meson.build
subprojects/packagefiles/libbpf/bpf/: meson.build
